# DragIt

./: CMakeLists.txt  DragWidget.cpp  DragWidget.h  MainWindow.cpp  MainWindow.h  README.md  icon.rc  main.cpp  res.qrc
